09-ingress/ingress.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: 09-ingress
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-service
  namespace: 09-ingress
spec:
  selector:
    app: podinfo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9898
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  namespace: 09-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo-service
                port:
                  name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-ingress
  namespace: 09-ingress
  labels:
    app: podinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
        - name: podinfo
          image: stefanprodan/podinfo:latest
          ports:
            - containerPort: 9898
